<resources>
    <string name="app_name">StoryApps</string>
    <string name="stories_name">User\'s Name</string>
    <string name="description">Description</string>
    <string name="gallery">galerry</string>
    <string name="upload">upload</string>
    <string name="camera_x">cameraX</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="email_not_valid">Email not valid!</string>
    <string name="name">name</string>
    <string name="ini_adalah_post">this is a post</string>
    <string name="ini_profile">this is profile</string>
    <string name="welcome">WELCOME!</string>
    <string name="ini_foto_yang_akan_diunggah">Photo you want to upload</string>
    <string name="let_s_go_in">Let\'s Go In</string>
    <string name="postdate">postdate</string>
    <string name="tap_for_more">Tap for more</string>
    <string name="logout">logout</string>
    <string name="put_your_caption_here">put your caption here</string>
    <string name="postHours">Posted </string>
    <string name="hours"> hours </string>
    <string name="minutes"> minutes </string>
    <string name="ago">ago</string>
    <string name="setting">setting</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="_1">1</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="start_running">Start Running</string>
    <string name="stop_running">Stop Running</string>
    <string name="start_point">Start Point</string>
    <string name="retry">Try Again</string>
</resources>