<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@id/card_view"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="20dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.511"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/avatar">

            <ImageView
                android:id="@+id/imgItemPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/ini_adalah_post"
                android:scaleType="centerCrop"
                android:transitionName="post"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/card_view"
            android:transitionName="uname"
            android:textSize="20sp"
            android:textStyle="normal"
            card_view:layout_constraintBottom_toBottomOf="@+id/avatar"
            card_view:layout_constraintEnd_toEndOf="@id/card_view"
            card_view:layout_constraintStart_toEndOf="@+id/avatar"
            card_view:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="@string/stories_name" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            card_view:layout_constraintBottom_toBottomOf="@id/card_view"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:transitionName="ava"
            android:contentDescription="@string/ini_profile"
            card_view:layout_constraintStart_toStartOf="@id/card_view"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/postDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="8dp"
            android:text="@string/postHours"
            android:transitionName="posted"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/avatar"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/More"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tap_for_more"
            card_view:drawableEndCompat="@drawable/ic_next"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@id/card_view"
            card_view:layout_constraintTop_toBottomOf="@id/card_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>