<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".login.LoginActivity">


    <ImageView
        android:id="@+id/handbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@drawable/handbg" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroung" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationZ="90dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/login"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.storyapp.custom.CustomEmail
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:alpha="0"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.storyapp.custom.CustomPassword
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="12dp"
        android:alpha="0"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/register"
        android:alpha="0"
        android:translationZ="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_not_valid"
        android:textColor="#D31313"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:alpha="0"
        android:contentDescription="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/group" />

    <TextView
        android:id="@+id/textView"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/let_s_go_in"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/darkBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="80dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:translationZ="90dp"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="302dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>