<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addPhoto.AddPhotoActivity">


    <ImageView
        android:id="@+id/handBgAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/handbg" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroung" />

    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/camera_x"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        android:contentDescription="@string/ini_foto_yang_akan_diunggah"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />


    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/upload"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/put_your_caption_here"
        android:alpha="0"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/darkBgupload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="80dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationZ="90dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>